Add content to  README.md and content to lasagna.html
- Add lasagna photo in lasagna.html
- Add desctription on lasagna in lasagna.html
- Fill out README.md with project instructions

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,14 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <img src="../img/lasagna.jpg" alt="A piece of lasagna">
+        <h2>Description:</h2>
+            <p>This recipe is one that has been passed down by many generations in my family...
+            It is very good and delicious and I like lasagna a lot!
+            Who doesn't like lasagna really? Everyone I have ever met says that
+            they love this lasagna recipe for sure.</p>
+            <p>Anyways... I cam't think of any info to add and I don't actually
+            want to write about lasagna. That being said, I do actually quite like lasagna and
+            pasta as a whole for that manner.</p>
     </body>
 </html>
