--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,5 +15,38 @@
             <p>Anyways... I cam't think of any info to add and I don't actually
             want to write about lasagna. That being said, I do actually quite like lasagna and
             pasta as a whole for that manner.</p>
+        <h2>Ingredients:</h2>
+                <ul>
+                    <li>Italian Sausage</li>
+                    <li>Ground Beef</li>
+                    <li>Onion</li>
+                    <li>Garlic</li>
+                    <li>Tomatoes</li>
+                    <li>Water</li>
+                    <li>Sugar</li>
+                    <li>Basil Leaves</li>
+                    <li>Fennel Seeds</li>
+                    <li>Italian Seasoning</li>
+                    <li>Salt</li>
+                    <li>Black Pepper</li>
+                    <li>Fresh Parsley</li>
+                    <li>Lasagna Noodles</li>
+                    <li>Ricotta Cheese</li>
+                    <li>Eggs</li>
+                    <li>Mozzarella Cheese</li>
+                    <li>Parmesan Cheese</li>
+                </ul>
+            <h2>Steps:</h2>
+                <ol>
+                    <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+                    <br>
+                    <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
+                    <br>
+                    <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+                    <br>
+                    <li>To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray, or make sure the foil does not touch the cheese.</li>
+                    <br>
+                    <li>Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.</li>
+                </ol>
     </body>
 </html>
