--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/ham-sandwich.html">Ham Sandwich</a></li>
+            <li><a href="./recipes/tomato-soup.html">Tomato Soup</a></li>
+        </ul>
     </body>
 </html>
