--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -13,19 +13,22 @@
             to enjoy food with genuine love and soul?</p>
             <p>I certainly do. And thats why I am posting this recipe here for you. You're welcome.</p>
         <h2>Ingredients:</h2>
-                <ul>
-                    <li>Tomatoes</li>
-                    <li>Water</li>
-                    <li>Milk?</li>
-                    <li>I don't really make tomato soup that often. Maybe add basil or something idk</li>
-                </ul>
-            <h2>Steps:</h2>
-                <ol>
-                    <li>Take the ingredients and put em' together. Probably in a pot.</li>
-                    <br>
-                    <li>Turn on the heat and stir it all togther.</li>
-                    <br>
-                    <li>I hope by this point you have something that remotely resembles tomato soup, because I don't know what else to add here...</li>
-                </ol>
+            <ul>
+                <li>Tomatoes</li>
+                <li>Water</li>
+                <li>Milk?</li>
+                <li>I don't really make tomato soup that often. Maybe add basil or something idk</li>
+            </ul>
+        <h2>Steps:</h2>
+            <ol>
+                <li>Take the ingredients and put em' together. Probably in a pot.</li>
+                <br>
+                <li>Turn on the heat and stir it all togther.</li>
+                <br>
+                <li>I hope by this point you have something that remotely resembles tomato soup, because I don't know what else to add here...</li>
+                <br>
+                <li>Thank you for listening to my Ted Talk</li>
+            </ol>
+        <a href="../index.html">Return to homepage</a>
     </body>
 </html>
