Create stylesheet and add classes to elements for styling
- Create style.css
- Add classes to elements to be styled
    - Add "title" class to all <h1> tags
    - Add "title" and "sub-title" classes to all <h2> tags
    - Add "content" class to all <p>, <ul>, and <ol> tags

--- a/recipes/ham-sandwich.html
+++ b/recipes/ham-sandwich.html
@@ -5,26 +5,27 @@
         <title>Ham Sandwich</title>
     </head>
     <body>
-        <h1>Ham Sandwich</h1>
+        <h1 class="title">Ham Sandwich</h1>
         <img src="../img/ham-sandwich.png" alt="A piece of lasagna">
-        <h2>Description:</h2>
-            <p>This recipe of a ham sandwich is so good it'll probably rock your socks off.
+        <h2 class="title sub-title">Description:</h2>
+            <p class="content">This recipe of a ham sandwich is so good it'll probably rock your socks off.
             To be honest, I shouldn't even be sharing this absolutely amazing sandwich recipe with anyone,
             because I fear that if in the wrong hands, this sandwich recipe could do some crazy stuff!</p>
-            <p>I can trust you though, of course. We've known eachother for so long and I know
+            <p class="content">I can trust you though, of course. We've known eachother for so long and I know
             I can leave this world-altering ham sandwich recipe in your hands safely.</p>
-        <h2>Ingredients:</h2>
-            <ul>
+        <h2 class="title sub-title">Ingredients:</h2>
+            <ul class="content">
                 <li>Bread</li>
                 <li>Ham</li>
                 <li>Red Onion</li>
                 <li>Cheese</li>
                 <li>Tomato</li>
                 <li>Lettuce</li>
-                <li>Mayo</li>                    <li>Mustard</li>
+                <li>Mayo</li>                    
+                <li>Mustard</li>
             </ul>
-        <h2>Steps:</h2>
-            <ol>
+        <h2 class="title sub-title">Steps:</h2>
+            <ol class="content">
                 <li>Lather up your bread with mayo and mustard</li>
                 <br>
                 <li>Slap on the ingredients one by one (in any order your little heart desires)</li>
