--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,18 +5,18 @@
         <title>Lasagna</title>
     </head>
     <body>
-        <h1>Lasagna</h1>
+        <h1 class="title">Lasagna</h1>
         <img src="../img/lasagna.jpg" alt="A piece of lasagna">
-        <h2>Description:</h2>
-            <p>This recipe is one that has been passed down by many generations in my family...
+        <h2 class="title sub-title">Description:</h2>
+            <p class="content">This recipe is one that has been passed down by many generations in my family...
             It is very good and delicious. I like lasagna a lot!
             Who doesn't like lasagna really? Everyone I have ever met says that
             they love this lasagna recipe for sure.</p>
-            <p>Anyways... I can't think of any info to add and I don't actually
+            <p class="conent">Anyways... I can't think of any info to add and I don't actually
             want to write about lasagna. That being said, I do actually quite like lasagna and
             pasta as a whole for that manner.</p>
-        <h2>Ingredients:</h2>
-            <ul>
+        <h2 class="title sub-title">Ingredients:</h2>
+            <ul class="content">
                 <li>Italian Sausage</li>
                 <li>Ground Beef</li>
                 <li>Onion</li>
@@ -36,8 +36,8 @@
                 <li>Mozzarella Cheese</li>
                 <li>Parmesan Cheese</li>
             </ul>
-        <h2>Steps:</h2>
-            <ol>
+        <h2 class="titile sub-title">Steps:</h2>
+            <ol class="content">
                 <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
                 <br>
                 <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
