--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -5,22 +5,22 @@
         <title>Tomato Soup</title>
     </head>
     <body>
-        <h1>Tomato Soup</h1>
+        <h1 class="title">Tomato Soup</h1>
         <img src="../img/tomato-soup.jpg" alt="A piece of lasagna">
-        <h2>Description:</h2>
-            <p>Tomato soup is real good. I mean come on, who doesn't have that childhood memory of eating your mom's homemade
+        <h2 class="title sub-title">Description:</h2>
+            <p class="content">Tomato soup is real good. I mean come on, who doesn't have that childhood memory of eating your mom's homemade
             tomato soup that is oddly reminiscent of that scene in Pixar's Ratatouille where the mean old critic remembers what it was like
             to enjoy food with genuine love and soul?</p>
-            <p>I certainly do. And thats why I am posting this recipe here for you. You're welcome.</p>
-        <h2>Ingredients:</h2>
-            <ul>
+            <p class="content">I certainly do. And thats why I am posting this recipe here for you. You're welcome.</p>
+        <h2 class="title sub-title">Ingredients:</h2>
+            <ul class="content">
                 <li>Tomatoes</li>
                 <li>Water</li>
                 <li>Milk?</li>
                 <li>I don't really make tomato soup that often. Maybe add basil or something idk</li>
             </ul>
-        <h2>Steps:</h2>
-            <ol>
+        <h2 class="title sub-title">Steps:</h2>
+            <ol class="content">
                 <li>Take the ingredients and put em' together. Probably in a pot.</li>
                 <br>
                 <li>Turn on the heat and stir it all togther.</li>
