Add styling, add ids, and link to stylesheet
- Add id names to all <h1> tags
- Add link elements to style.css on each recipe page
- Fix typos in class names in lasagna.html
- Add general text styling for several classes/ids

--- a/recipes/ham-sandwich.html
+++ b/recipes/ham-sandwich.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Ham Sandwich</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1 class="title">Ham Sandwich</h1>
+        <h1 id="ham-sandwich" class="title">Ham Sandwich</h1>
         <img src="../img/ham-sandwich.png" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
             <p class="content">This recipe of a ham sandwich is so good it'll probably rock your socks off.
