--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1 class="title">Lasagna</h1>
+        <h1 id="lasagna" class="title">Lasagna</h1>
         <img src="../img/lasagna.jpg" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
             <p class="content">This recipe is one that has been passed down by many generations in my family...
             It is very good and delicious. I like lasagna a lot!
             Who doesn't like lasagna really? Everyone I have ever met says that
             they love this lasagna recipe for sure.</p>
-            <p class="conent">Anyways... I can't think of any info to add and I don't actually
+            <p class="content">Anyways... I can't think of any info to add and I don't actually
             want to write about lasagna. That being said, I do actually quite like lasagna and
             pasta as a whole for that manner.</p>
         <h2 class="title sub-title">Ingredients:</h2>
@@ -36,7 +37,7 @@
                 <li>Mozzarella Cheese</li>
                 <li>Parmesan Cheese</li>
             </ul>
-        <h2 class="titile sub-title">Steps:</h2>
+        <h2 class="title sub-title">Steps:</h2>
             <ol class="content">
                 <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
                 <br>
