--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Tomato Soup</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1 class="title">Tomato Soup</h1>
+        <h1 id="tomato-soup" class="title">Tomato Soup</h1>
         <img src="../img/tomato-soup.jpg" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
             <p class="content">Tomato soup is real good. I mean come on, who doesn't have that childhood memory of eating your mom's homemade
