Add and edit "body" class
-Add "body" class to the <body> of each recipe page
-Add a "body" class declaration block to style.css
    - Add a background color rule to this block

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,7 @@
         <title>Lasagna</title>
         <link rel="stylesheet" href="../style.css">
     </head>
-    <body>
+    <body class="body">
         <h1 id="lasagna" class="title">Lasagna</h1>
         <img src="../img/lasagna.jpg" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
