--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -5,7 +5,7 @@
         <title>Tomato Soup</title>
         <link rel="stylesheet" href="../style.css">
     </head>
-    <body>
+    <body class="body">
         <h1 id="tomato-soup" class="title">Tomato Soup</h1>
         <img src="../img/tomato-soup.jpg" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
