--- a/recipes/ham-sandwich.html
+++ b/recipes/ham-sandwich.html
@@ -5,7 +5,7 @@
         <title>Ham Sandwich</title>
         <link rel="stylesheet" href="../style.css">
     </head>
-    <body>
+    <body class="body">
         <h1 id="ham-sandwich" class="title">Ham Sandwich</h1>
         <img src="../img/ham-sandwich.png" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
