Add ids to all imgs and size them
- Add ids to all imgs
- Create three new declaration blocks for new ids in style.css
- Style/size imgs in style.css

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     </head>
     <body class="body">
         <h1 id="lasagna" class="title">Lasagna</h1>
-        <img src="../img/lasagna.jpg" alt="A piece of lasagna">
+        <img id="lasagna-img" src="../img/lasagna.jpg" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
             <p class="content">This recipe is one that has been passed down by many generations in my family...
             It is very good and delicious. I like lasagna a lot!
