--- a/recipes/ham-sandwich.html
+++ b/recipes/ham-sandwich.html
@@ -7,7 +7,7 @@
     </head>
     <body class="body">
         <h1 id="ham-sandwich" class="title">Ham Sandwich</h1>
-        <img src="../img/ham-sandwich.png" alt="A piece of lasagna">
+        <img id="ham-sandwich-img" src="../img/ham-sandwich.png" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
             <p class="content">This recipe of a ham sandwich is so good it'll probably rock your socks off.
             To be honest, I shouldn't even be sharing this absolutely amazing sandwich recipe with anyone,
