--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -7,7 +7,7 @@
     </head>
     <body class="body">
         <h1 id="tomato-soup" class="title">Tomato Soup</h1>
-        <img src="../img/tomato-soup.jpg" alt="A piece of lasagna">
+        <img id="tomato-soup-img" src="../img/tomato-soup.jpg" alt="A piece of lasagna">
         <h2 class="title sub-title">Description:</h2>
             <p class="content">Tomato soup is real good. I mean come on, who doesn't have that childhood memory of eating your mom's homemade
             tomato soup that is oddly reminiscent of that scene in Pixar's Ratatouille where the mean old critic remembers what it was like
